<?xml version="1.0"?>
<package format="2">
  <name>opencaret_vehicle_interface</name>
  <version>0.0.1</version>
  <description>Vehicle Interface</description>
  <maintainer email="jrojas@redlinesolutions.co">Jose Rojas</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv3</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_conversions</depend>
  <depend>nodelet</depend>
</package>
